@@ -5,9 +5,10 @@ import static org.junit.jupiter.api.Assertions.assertSame;
 
 import java.io.IOException;
 import java.io.PrintStream;
+import java.io.PrintWriter;
+import java.io.StringWriter;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.io.File;
 import java.io.FileWriter;
@@ -45,12 +46,13 @@ import org.lflang.LFRuntimeModule;
 import org.lflang.LFStandaloneSetup;
 import org.lflang.Target;
 import org.lflang.TargetConfig.Mode;
+import org.lflang.generator.GeneratorResult;
 import org.lflang.generator.LFGenerator;
+import org.lflang.generator.LFGeneratorContext;
 import org.lflang.generator.MainContext;
 import org.lflang.tests.Configurators.Configurator;
 import org.lflang.tests.LFTest.Result;
 import org.lflang.tests.TestRegistry.TestCategory;
-import org.lflang.util.StringUtil;
 import org.lflang.util.LFCommand;
 
 import com.google.inject.Inject;
@@ -97,11 +99,6 @@ public abstract class TestBase {
 
     /** The targets for which to run the tests. */
     private final List<Target> targets;
-    /**
-     * Whether the goal is to only computer code coverage, in which we cut down
-     * on verbosity of our error reporting.
-     */
-    protected boolean codeCovOnly;
 
 
 
@@ -120,7 +117,6 @@ public abstract class TestBase {
     public static class Message {
         /* Reasons for not running tests. */
         public static final String NO_WINDOWS_SUPPORT = "Not (yet) supported on Windows.";
-        public static final String NOT_FOR_CODE_COV = "Unlikely to help improve code coverage.";
         public static final String ALWAYS_MULTITHREADED = "The reactor-cpp runtime is always multithreaded.";
         public static final String NO_THREAD_SUPPORT = "Target does not support the 'threads' property.";
         public static final String NO_FEDERATION_SUPPORT = "Target does not support federated execution.";
@@ -186,11 +182,8 @@ public abstract class TestBase {
             } catch (IOException e) {
                 throw new RuntimeIOException(e);
             }
-            System.out
-                    .println(TestRegistry.getCoverageReport(target, category));
-            if (!this.codeCovOnly) {
-                checkAndReportFailures(tests);
-            }
+            System.out.println(TestRegistry.getCoverageReport(target, category));
+            checkAndReportFailures(tests);
         }
     }
 
@@ -370,7 +363,7 @@ public abstract class TestBase {
      * transformation that may have occured in other tests.
      * @throws IOException if there is any file access problem
      */
-    private IGeneratorContext configure(LFTest test, Configurator configurator, TestLevel level) throws IOException {
+    private LFGeneratorContext configure(LFTest test, Configurator configurator, TestLevel level) throws IOException {
         var context = new MainContext(
             Mode.STANDALONE, CancelIndicator.NullImpl, (m, p) -> {}, new Properties(), true,
             fileConfig -> new DefaultErrorReporter()
@@ -389,7 +382,7 @@ public abstract class TestBase {
         test.fileConfig = new FileConfig(r, fileAccess, context);
 
         // Set the no-compile flag the test is not supposed to reach the build stage.
-        if (level.compareTo(TestLevel.BUILD) < 0 || this.codeCovOnly) {
+        if (level.compareTo(TestLevel.BUILD) < 0) {
             context.getArgs().setProperty("no-compile", "");
         }
 
@@ -440,14 +433,17 @@ public abstract class TestBase {
      * Invoke the code generator for the given test.
      * @param test The test to generate code for.
      */
-    private void generateCode(LFTest test) {
+    private GeneratorResult generateCode(LFTest test) {
+        GeneratorResult result = GeneratorResult.NOTHING;
         if (test.fileConfig.resource != null) {
             generator.doGenerate(test.fileConfig.resource, fileAccess, test.fileConfig.context);
+            result = test.fileConfig.context.getResult();
             if (generator.errorsOccurred()) {
                 test.result = Result.CODE_GEN_FAIL;
                 throw new AssertionError("Code generation unsuccessful.");
             }
         }
+        return result;
     }
 
 
@@ -456,8 +452,8 @@ public abstract class TestBase {
      * did not execute, took too long to execute, or executed but exited with
      * an error code.
      */
-    private void execute(LFTest test) {
-        final List<ProcessBuilder> pbList = getExecCommand(test);
+    private void execute(LFTest test, GeneratorResult generatorResult) {
+        final List<ProcessBuilder> pbList = getExecCommand(test, generatorResult);
         if (pbList.isEmpty()) {
             return;
         }
@@ -475,12 +471,18 @@ public abstract class TestBase {
                 } else {
                     if (p.exitValue() != 0) {
                         test.result = Result.TEST_FAIL;
+                        test.exitValue = Integer.toString(p.exitValue());
                         return;
                     }
                 }
             }
         } catch (Exception e) {
-            test.result = Result.TEST_FAIL;
+            test.result = Result.TEST_EXCEPTION;
+            // Add the stack trace to the test output
+            StringWriter sw = new StringWriter();
+            PrintWriter pw = new PrintWriter(sw);
+            e.printStackTrace(pw);
+            test.execLog.buffer.append(sw.toString());
             return;
         }
         test.result = Result.TEST_PASS;
@@ -610,11 +612,7 @@ public abstract class TestBase {
      * that should be used to execute the test program.
      * @param test The test to get the execution command for.
      */
-    private List<ProcessBuilder> getExecCommand(LFTest test) {
-        final var nameWithExtension = test.srcFile.getFileName().toString();
-        final var nameOnly = nameWithExtension.substring(0, nameWithExtension.lastIndexOf('.'));
-        
-        var srcGenPath = test.fileConfig.getSrcGenPath();
+    private List<ProcessBuilder> getExecCommand(LFTest test, GeneratorResult generatorResult) {
         var srcBasePath = test.fileConfig.srcPkgPath.resolve("src");
         var relativePathName = srcBasePath.relativize(test.fileConfig.srcPath).toString();
         
@@ -623,76 +621,15 @@ public abstract class TestBase {
             return getNonfederatedDockerExecCommand(test);
         } else if (relativePathName.equalsIgnoreCase(TestCategory.DOCKER_FEDERATED.getPath())) {
             return getFederatedDockerExecCommand(test);
-        }
-
-        var binPath = test.fileConfig.binPath;
-        var binaryName = nameOnly;
-
-        switch (test.target) {
-        case C:
-        case CPP:
-        case Rust:
-        case CCPP: {
-            if (test.target == Target.Rust) {
-                // rust binaries uses snake_case
-                binaryName = StringUtil.camelToSnakeCase(binaryName);
-            }
-            // Adjust binary extension if running on Window
-            if (System.getProperty("os.name").startsWith("Windows")) {
-                binaryName += ".exe";
-            }
-
-            var fullPath = binPath.resolve(binaryName);
-            if (Files.exists(fullPath)) {
-                // Running the command as .\binary.exe does not work on Windows for
-                // some reason... Thus we simply pass the full path here, which
-                // should work across all platforms
-                return Arrays.asList(new ProcessBuilder(fullPath.toString()).directory(binPath.toFile()));
-            } else {
-                test.issues.append(fullPath).append(": No such file or directory.").append(System.lineSeparator());
+        } else {
+            LFCommand command = generatorResult.getCommand();
+            if (command == null) {
                 test.result = Result.NO_EXEC_FAIL;
-                return new ArrayList<>();
+                test.issues.append("File: ").append(generatorResult.getExecutable()).append(System.lineSeparator());
             }
-        }
-        case Python: {
-            var fullPath = binPath.resolve(binaryName);
-            if (Files.exists(fullPath)) {
-                // If execution script exists, run it.
-                return Arrays.asList(new ProcessBuilder(fullPath.toString()).directory(binPath.toFile()));
-            }
-            fullPath = srcGenPath.resolve(nameOnly + ".py");
-            if (Files.exists(fullPath)) {
-                return Arrays.asList(new ProcessBuilder("python3", fullPath.getFileName().toString())
-                    .directory(srcGenPath.toFile()));
-            } else {
-                test.result = Result.NO_EXEC_FAIL;
-                test.issues.append("File: ").append(fullPath).append(System.lineSeparator());
-                return new ArrayList<>();
-            }
-        }
-        case TS: {
-            // Adjust binary extension if running on Window
-            if (System.getProperty("os.name").startsWith("Windows")) {
-                binaryName += ".exe";
-            }
-            var fullPath = binPath.resolve(binaryName);
-            if (Files.exists(fullPath)) {
-                // If execution script exists, run it.
-                return Arrays.asList(new ProcessBuilder(fullPath.toString()).directory(binPath.toFile()));
-            }
-            // If execution script does not exist, run .js directly.
-            var dist = test.fileConfig.getSrcGenPath().resolve("dist");
-            var file = dist.resolve(nameOnly + ".js");
-            if (Files.exists(file)) {
-                return Arrays.asList(new ProcessBuilder("node", file.toString()));
-            } else {
-                test.result = Result.NO_EXEC_FAIL;
-                test.issues.append("File: ").append(file).append(System.lineSeparator());
-                return new ArrayList<>();
-            }
-        }
-        default:
-            throw new AssertionError("unreachable");
+            return command == null ? List.of() : List.of(
+                new ProcessBuilder(command.command()).directory(command.directory())
+            );
         }
     }
 
@@ -717,11 +654,12 @@ public abstract class TestBase {
                 redirectOutputs(test);
                 var context = configure(test, configurator, level);
                 validate(test, context);
+                GeneratorResult result = GeneratorResult.NOTHING;
                 if (level.compareTo(TestLevel.CODE_GEN) >= 0) {
-                    generateCode(test);
+                    result = generateCode(test);
                 }
-                if (!this.codeCovOnly && level == TestLevel.EXECUTION) {
-                    execute(test);
+                if (level == TestLevel.EXECUTION) {
+                    execute(test, result);
                 } else if (test.result == Result.UNKNOWN) {
                     test.result = Result.TEST_PASS;
                 }
